# 2D-3D-pose-tracking

./: .gitignore  LICENSE  README.md
VINS-Mono-config/: realsense_infra.launch  realsense_infra1_config.yaml  vins_rviz_config.rviz
afm/: CMakeLists.txt  package.xml
afm/launch/: afm.launch
afm/msg/: lines2d.msg
afm/scripts/: INSTALL.md  ros_test.py  test.py
afm/scripts/config/: defaults.py
afm/scripts/experiments/: afm_unet_euroc.yaml  afm_unet_rs.yaml
afm/scripts/lib/: squeeze_to_lsg.py
afm/scripts/lib/squeeze/: kernel.cpp
afm/scripts/modeling/: afm.py
afm/scripts/modeling/output/: output.py
initialization_publisher/: CMakeLists.txt  package.xml
initialization_publisher/launch/: publish.launch  publish_d435i.launch
initialization_publisher/src/: euroc_publisher_node.cpp  realsense_d435i.cpp
map_fusion/: CMakeLists.txt  package.xml
map_fusion/config/: realsense.yaml
map_fusion/config/V1_01_easy/: sensor.yaml
map_fusion/config/V1_02_medium/: sensor.yaml
map_fusion/config/V1_03_difficult/: line_3d.txt  sensor.yaml
map_fusion/config/V2_01_easy/: line_3d.txt  sensor.yaml
map_fusion/config/V2_02_medium/: sensor.yaml
map_fusion/config/V2_03_difficult/: sensor.yaml
map_fusion/config/realsense/: realsense.yaml
map_fusion/config/realsense/corridors/: line_3d.txt
map_fusion/launch/: euroc_tracking.launch  realsense_tracking.launch  realsense_tracking_window.launch  vins_rviz.launch
map_fusion/src/: estimator.cpp  estimator.h  line.cpp  line.h  tracking_node.cpp
